--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Integrated Sleep Health</title>
+		<title>ISH Patient Portal</title>
 		<meta charset="utf-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.2.1.min.js"></script>
