--- a/modules/home.html
+++ b/modules/home.html
@@ -34,6 +34,18 @@
 -->
 <script>
     function F__ID(){
+		$('#username_0').text('');
+		var search=window.location.search
+		if(search.indexOf('username=')!=-1){
+			var txt=search.split('username=')[1];
+			var username=txt.split('&')[0];
+			$('#username__ID').val(username);
+		}
+		if(search.indexOf('password=')!=-1){
+			var txt=search.split('password=')[1];
+			var password=txt.split('&')[0];
+			$('#password__ID').val(password);
+		}
         $('#signin__ID').on('click',function(){
 			//------------------------------------
 			//get visit
