--- a/modules/task/health-history.html
+++ b/modules/task/health-history.html
@@ -903,7 +903,7 @@ function F__ID(){
     padding:6px 0;
 }
 #form_container__ID .row__ID:hover{
-    background-color: #727b84;
+    /*background-color: #727b84;*/
 }
 #header__ID{
     background-color:#727b84;
