--- a/modules/panel/initial.html
+++ b/modules/panel/initial.html
@@ -8,7 +8,7 @@
                       </h5>
                       <div class="text-left">
                           <ul>
-							<li module=personal><div id=personal></div> Personal</li>
+							<li module=contact-details><div id=contact-details></div> Contact Details</li>
 							<li module=medicare-referrals><div id="medicare-referrals"></div> Medicare - DVA - Self Funded Details</li>
 							<li module=sleep-history><div id="sleep-history"></div> Sleep History</li>
 							<li module=health-history><div id="health-history"></div> Health History</li>
@@ -20,7 +20,7 @@
                         </ul>
                       </div>
                       <h5 class= "text-left">
-                          Once they are completed please click on ‘sign-out’ below, to exit the system. Thank you for your time in helping us help you during your upcoming visit. We look forward to seeing you soon.<br><br>
+                          Once they are completed please click on ‘sign-out’ below, to exit the system. <br>Thank you for your time in helping us help you during your upcoming visit. We look forward to seeing you soon.<br><br>
                       </h5>
                       <a name=signinout onclick="$vm.nav_click_process('vm_signinout');" class="btn btn-primary" style='cursor:pointer'>Sign out</a>
     			  </div>
@@ -46,8 +46,8 @@
 					var $li=$(this);
                     $li.data("record_id","");
 					$li.off('click');
-					//$li.removeClass('li_allowed__ID')
-					//$li.addClass('li_not_allowed__ID')
+					$li.removeClass('li_not_allowed__ID')
+					$li.addClass('li_allowed__ID')
                     var module=$li.attr('module');
 					$('#'+module).attr("class", "fa fa-remove")
 
@@ -59,13 +59,15 @@
                         if(res.records[i]['PID']==li_pid){
                             $li.data('record_id',res.records[i]['ID']);
                             $li.data('record_pid',res.records[i]['PID']);
-                            //$li.removeClass('li_not_allowed__ID')
-                            //$li.addClass('li_allowed__ID')
+							$li.removeClass('li_allowed__ID')
+							$li.addClass('li_not_allowed__ID')
 							$('#'+module).attr("class", "fa fa-check")
-                            $li.on('click',function(){
+/*
+							$li.on('click',function(){
 								var m=prefix+$(this).attr('module');
 								$vm.nav_load_module(m,$vm.root_layout_content_slot,{rid:$(this).data('record_id'),db_pid:$(this).data('record_pid')});
 							});
+*/
                         }
                     }
                 });
