--- a/modules/task/medicare-referrals.html
+++ b/modules/task/medicare-referrals.html
@@ -6,10 +6,6 @@
         <div class="container">
             <div  class="row row__ID">
                 <div class="col-sm">
-                    Appointment Date
-                    <input class="form-control" type="text" name="Appointment_date" id=Appointment_date__ID placeholder="Appointment Date" required >
-                </div>
-                <div class="col-sm">
                     Please describe in 20 words or less, your reason for booking this appointment
                     <textarea class="form-control" name="Reason" id=Reason__ID placeholder="Reason" required ></textarea>
                 </div>
@@ -117,19 +113,22 @@ function F__ID(){
                 $('#DVA__ID').prop('disabled',true);
                 $('#Medicare_number__ID').prop('disabled',false);
                 $('#Medicare_reference_number__ID').prop('disabled',false);
-                $('#Medicare_expiry__ID').prop('disabled',false);
+                $('#Medicare_expiry_mm__ID').prop('disabled',false);
+                $('#Medicare_expiry_yy__ID').prop('disabled',false);
             break;
             case 'Department of Veterans Affairs':
                 $('#DVA__ID').prop('disabled',false);
                 $('#Medicare_number__ID').prop('disabled',true);
                 $('#Medicare_reference_number__ID').prop('disabled',true);
-                $('#Medicare_expiry__ID').prop('disabled',true);
+                $('#Medicare_expiry_mm__ID').prop('disabled',true);
+                $('#Medicare_expiry_yy__ID').prop('disabled',true);
             break;
             case 'Self Funded':
                 $('#DVA__ID').prop('disabled',true);
                 $('#Medicare_number__ID').prop('disabled',true);
                 $('#Medicare_reference_number__ID').prop('disabled',true);
-                $('#Medicare_expiry__ID').prop('disabled',true);
+                $('#Medicare_expiry_mm__ID').prop('disabled',true);
+                $('#Medicare_expiry_yy__ID').prop('disabled',true);
             break;
         }
     });
@@ -142,19 +141,22 @@ function F__ID(){
                 $('#DVA__ID').prop('disabled',true);
                 $('#Medicare_number__ID').prop('disabled',false);
                 $('#Medicare_reference_number__ID').prop('disabled',false);
-                $('#Medicare_expiry__ID').prop('disabled',false);
+                $('#Medicare_expiry_mm__ID').prop('disabled',false);
+                $('#Medicare_expiry_yy__ID').prop('disabled',false);
             break;
             case 'Department of Veterans Affairs':
                 $('#DVA__ID').prop('disabled',false);
                 $('#Medicare_number__ID').prop('disabled',true);
                 $('#Medicare_reference_number__ID').prop('disabled',true);
-                $('#Medicare_expiry__ID').prop('disabled',true);
+                $('#Medicare_expiry_mm__ID').prop('disabled',true);
+                $('#Medicare_expiry_yy__ID').prop('disabled',true);
             break;
             case 'Self Funded':
                 $('#DVA__ID').prop('disabled',true);
                 $('#Medicare_number__ID').prop('disabled',true);
                 $('#Medicare_reference_number__ID').prop('disabled',true);
-                $('#Medicare_expiry__ID').prop('disabled',true);
+                $('#Medicare_expiry_mm__ID').prop('disabled',true);
+                $('#Medicare_expiry_yy__ID').prop('disabled',true);
             break;
         }
 
@@ -185,7 +187,6 @@ function F__ID(){
             $('#ModalLabel').html('Error!');
         }
     })
-    $("input#Appointment_date__ID").datepicker({dateFormat:'dd/mm/yy'});
 
 
 }
@@ -195,7 +196,7 @@ function F__ID(){
     height:100%;
     overflow: auto;
     animation: vm_module_fadein 1.0s;
-    background-color: #465a69;
+    background: rgba(151,164,181,0.95);
 }
 #form_container__ID{
     padding-top:50px;
@@ -206,17 +207,17 @@ function F__ID(){
     font-family: Verdana,sans-serif;
     font-size: 15px;
     line-height: 1.5;
-    color: #fff;
+    color: #000;
 }
 #form_container__ID .row__ID{
     padding:6px 0;
 }
 #form_container__ID .row__ID:hover{
-    background-color: #203342;
+    /*background-color: #727b84;*/
 }
 #header__ID{
     background-color:#727b84;
-    color:#fff;
+    color:#000;
     padding:10px 15px 10px 15px;
     font-size:150%;
 }
@@ -225,7 +226,7 @@ function F__ID(){
     font-size:120%;
 }
 #F__ID{
-    border:1px solid #bbb;
+    border:1px solid #727b84;
     padding:6px 15px 20px 15px;
 }
 #F__ID label
@@ -280,6 +281,7 @@ function F__ID(){
 .control-radio .control_indicator {
     border-radius: 50%;
 }
+
 .control:hover input ~ .control_indicator,
 .control input:focus ~ .control_indicator {
     background: #cccccc;
@@ -316,20 +318,5 @@ function F__ID(){
 }
 .control-radio input:disabled ~ .control_indicator:after {
     background: #7b7b7b;
-}
-.control-checkbox .control_indicator {
-    border-radius: 10%;
-}
-.control-checkbox .control_indicator:after {
-    left: 8px;
-    top: 4px;
-    width: 3px;
-    height: 8px;
-    border: solid #ffffff;
-    border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
-}
-.control-checkbox input:disabled ~ .control_indicator:after {
-    border-color: #7b7b7b;
 }
 </style>
