--- a/isleephealth-patients-portal/initial/modules/ffs.html
+++ b/isleephealth-patients-portal/initial/modules/ffs.html
@@ -1,3 +1,6 @@
+<div id=admin__ID style='display:none'>
+    VmInclude:__COMPONENT__/toolbar/form-toolbar.html
+</div>
 <section id=form_container__ID>
     <div id=header__ID>
 		Flinders Fatigue Scale
@@ -217,8 +220,50 @@
 </section>
 <script>
 function F__ID(){
-    VmInclude:__CURRENT_PATH__/task.js
-    _before_submit=function(record,dbv){
+    //-------------------------------------
+    $('#D__ID').on('load',function(){
+        $('#F__ID')[0].reset();
+        $('#F__ID input:checkbox').removeAttr('checked');
+        $('#submit__ID').show();
+        var record=$vm.vm['__ID'].op.record; if(record==undefined) record=$vm.vm['__ID'].op.input.record;
+        if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.readonly!=undefined) $('#submit__ID').hide();
+        if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.admin!=undefined) $('#admin__ID').show();
+        $vm.deserialize(record,'#F__ID');
+    })
+    //-------------------------------------
+    $('#F__ID').submit(function(event){
+        //--------------------------------------------------------
+        event.preventDefault();
+        $('#submit__ID').hide();
+        //--------------------------------------------------------
+        var data=$vm.serialize('#F__ID'); var dbv={}
+        _before_submit(data,dbv);
+        //--------------------------------------------------------
+        var db_pid=$vm.module_list[$vm.vm['__ID'].name].table_id;
+        var rid=undefined; if($vm.vm['__ID'].op.record!=undefined) rid=$vm.vm['__ID'].op.record.ID;
+        var req={cmd:"add_json_record_s2",db_pid:db_pid,data:data,dbv:dbv};
+        if(rid!=undefined) req={cmd:"modify_json_record_s2",rid:rid,db_pid:db_pid,data:data,dbv:dbv};
+        $VmAPI.request({data:req,callback:function(res){
+            $vm.refresh=1;
+            if(rid!=undefined) window.history.go(-1);
+            else if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.goback!=undefined) window.history.go(-1);
+            else $vm.alert('Your data has been successfully submitted');
+        }});
+        //--------------------------------------------------------
+    })
+    //--------------------------------------------------------
+    var _before_submit=function(data,dbv){
+        before_submit_1();
+        if($vm.coq_participant!=undefined){
+            data.Participant=$vm.coq_participant;
+            data.Participant_uid=$vm.coq_participant_uid;
+            dbv.S1=$vm.coq_visit;
+            dbv.PPID=$vm.coq_participant_pid;
+            dbv.PUID=$vm.coq_participant_uid;
+        }
+    }
+    //--------------------------------------------------------
+    var before_submit_1=function(record,dbv){
         var ffs5=0;
         if(record.FFS_5_em=='on') ++ffs5;
         if(record.FFS_5_mm=='on') ++ffs5;
@@ -228,7 +273,6 @@ function F__ID(){
         if(record.FFS_5_ee=='on') ++ffs5;
         if(record.FFS_5_le=='on') ++ffs5;
         record.FFS=(ffs5+parseInt(record.FFS_1)+parseInt(record.FFS_2)+parseInt(record.FFS_3)+parseInt(record.FFS_4)+parseInt(record.FFS_6)+parseInt(record.FFS_7)).toString();
-        return true
     }
 }
 </script>
