--- a/isleephealth-patients-portal/initial/modules/isi.html
+++ b/isleephealth-patients-portal/initial/modules/isi.html
@@ -1,3 +1,6 @@
+<div id=admin__ID style='display:none'>
+    VmInclude:__COMPONENT__/toolbar/form-toolbar.html
+</div>
 <section id=form_container__ID>
     <div id=header__ID>
 		Insomnia Severity Index
@@ -253,7 +256,51 @@
 </section>
 <script>
 	function F__ID(){
-	    VmInclude:__CURRENT_PATH__/task.js
+        //-------------------------------------
+        $('#D__ID').on('load',function(){
+            $('#F__ID')[0].reset();
+            $('#F__ID input:checkbox').removeAttr('checked');
+            $('#submit__ID').show();
+            var record=$vm.vm['__ID'].op.record; if(record==undefined) record=$vm.vm['__ID'].op.input.record;
+            if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.readonly!=undefined) $('#submit__ID').hide();
+            if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.admin!=undefined) $('#admin__ID').show();
+            $vm.deserialize(record,'#F__ID');
+        })
+        //-------------------------------------
+        $('#F__ID').submit(function(event){
+            //--------------------------------------------------------
+            event.preventDefault();
+            $('#submit__ID').hide();
+            //--------------------------------------------------------
+            $('#ISI__ID').val((parseInt($("input[name='ISI_2']:checked").val())+parseInt($("input[name='ISI_3']:checked").val())+parseInt($("input[name='ISI_4']:checked").val())+parseInt($("input[name='ISI_5']:checked").val())+parseInt($("input[name='ISI_1a']:checked").val())+parseInt($("input[name='ISI_1b']:checked").val())+parseInt($("input[name='ISI_1c']:checked").val())));
+            $('#ISI_1__ID').val((parseInt($("input[name='ISI_1a']:checked").val())+parseInt($("input[name='ISI_1b']:checked").val())+parseInt($("input[name='ISI_1c']:checked").val())));
+            //--------------------------------------------------------
+            var data=$vm.serialize('#F__ID'); var dbv={}
+            _before_submit(data,dbv);
+            //--------------------------------------------------------
+            var db_pid=$vm.module_list[$vm.vm['__ID'].name].table_id;
+            var rid=undefined; if($vm.vm['__ID'].op.record!=undefined) rid=$vm.vm['__ID'].op.record.ID;
+            var req={cmd:"add_json_record_s2",db_pid:db_pid,data:data,dbv:dbv};
+            if(rid!=undefined) req={cmd:"modify_json_record_s2",rid:rid,db_pid:db_pid,data:data,dbv:dbv};
+            $VmAPI.request({data:req,callback:function(res){
+                $vm.refresh=1;
+                if(rid!=undefined) window.history.go(-1);
+                else if($vm.vm['__ID'].op.input!=undefined && $vm.vm['__ID'].op.input.goback!=undefined) window.history.go(-1);
+                else $vm.alert('Your data has been successfully submitted');
+            }});
+            //--------------------------------------------------------
+        })
+        //--------------------------------------------------------
+        var _before_submit=function(data,dbv){
+            if($vm.coq_participant!=undefined){
+                data.Participant=$vm.coq_participant;
+                data.Participant_uid=$vm.coq_participant_uid;
+                dbv.S1=$vm.coq_visit;
+                dbv.PPID=$vm.coq_participant_pid;
+                dbv.PUID=$vm.coq_participant_uid;
+            }
+        }
+        //--------------------------------------------------------
 	}
 </script>
 <style>
